--- a/PROJECT/Dominos.html
+++ b/PROJECT/Dominos.html
@@ -48,7 +48,7 @@
         <h2>Explore</h2>
     </blockquote>
     <blockquote style="background-image: url(../image/menubackground.png);width:100%; height:500px;">
-        <table border="1" style="text-align: center;" cellspacing="1"  cellpadding="20">
+        <table border="1" style="text-align: center;" cellspacing="1" cellpadding="20">
             <tr>
                 <th><img src="../image/MyMenu.png"></th>
                 <th><img src="../image/Nearby.png"></th>
@@ -74,98 +74,176 @@
                 <td>BOOK NOW</td>
             </tr>
         </table>
-<blockquote style="text-align: justify;">
-    <table>
-        <tr>
-            <th>        <P>
-                <h3>Domino's Pizza: Delivering Happiness</h3>
-                <p>What’s better than having a crispy melty pizza, you ask?</p>
-                <p>Having that crispy and melty pizza in the comfort of your own home with the ones you love, we say.</p>
-                <p>With Domino's it is always “Rishton ka time”. Whether it's a treat for your promotion, a kid topping his
-                    class or winning the heart of your wife who is too tired to cook after a long day at work! A cheesy slice of
-                    the best pizza is all one needs to put things into perspective and start any celebration. Plus, you do not
-                    even need to rush to the restaurant to have one now. A call, a few clicks on our website or a few touches on
-                    the mobile screen is all you have to do to have that tempting, light-on-the-pocket pizza at your doorstep.
-                </p>
-                <p>There is something for everyone here. The vegetarians, non-vegetarians, the sides’ lovers and also the ones
-                    who love to have something sweet by the time they reach the last bite of the last slice of pizza slice.
-                </p>
-                <p>
-                <h3>What We Need - More Choice. More Fun.</h3>
-                </p>
-                <p>No matter what the situation, pizza always helps. Especially a pizza that gives you the freedom to choose
-                    your toppings - from paneer, crisp capsicum, onion, grilled mushroom, golden corn, black olives, fresh
-                    tomato, red paprika, jalapeno, paneer tikka and extra cheese to non-veg toppings such as pepper barbeque
-                    chicken, peri-peri chicken, grilled chicken rasher, chicken sausage or chicken tikka- the options are almost
-                    endless, anything and everything you can think of that too on top of the crust of your choice - New
-                    hand-tossed crust, wheat thin crust, cheese burst crust, classic hand-tossed crust or a fresh pan pizza.
-                    Because just like a pizza, Domino's understands you.
-                </p>
-                <p>And to shoo away those end-of-the-month blues while placing your order with our pizza restaurant, check out
-                    the everyday pizzas from pizza mania combos with everyday value offer of 2 pizzas starting at just ₹99
-                    (regular size) and ₹199 (medium size) each.
-                </p>
-                <p>
-                <h3>The Promise Of 30-Minute Delivery</h3>
-                </p>
-                <p>The icing on the cake or more aptly the extra cheese on your already fabulous pizza is that Domino’s takes
-                    only half an hour for its pizza delivery service. Don’t believe us? Time it if you please. With 1250+ stores
-                    present all over India, you can have a Domino’s pizza even while traveling on a train. Yes, you are reading
-                    it right, you can enjoy pizza on train too.
-                </p>
-                <p>So stop googling for the “pizza shops near me” and order from your nearest pizza outlet to have a hot box of
-                    pizza on your table in the next 30 minutes, or berth at the next halting station.
-                </p>
-                <p>
-                <h3>Franchise Information</h3>
-                </p>
-                <p>Jubilant FoodWorks Limited is the Master Franchisee of Domino’s Pizza in India, Bangladesh, Sri Lanka and
-                    Nepal with sole and exclusive rights to own and operate Domino’s Pizza restaurants in these territories. For
-                    any franchise-related queries, kindly email us directly at dominos.franchise@jublfood.com
-                </p>
-                <p>We have come across a few instances of fraudsters posing as Jubilant FoodWorks and asking for payment from
-                    gullible investors against the promise of a Domino’s franchise. We therefore caution and urge all interested
-                    parties to be careful and vigilant and interact only with the email id mentioned above. Anyone dealing with
-                    such fraudsters shall be doing so on their own peril, risk and consequences.
-                </p>
-                <p>Neither Jubilant FoodWorks nor its Directors/Officers shall be responsible for any loss, harm, damage or
-                    fraud that occurs or may occur or arise to any person who decides to access such fake websites, or deal with
-                    them.
-                </p>
-                </P>
-        </th>
-        </tr>
-    </table>
-</blockquote>    
-    <hr>
-    <blockquote>
-        <table border="1" width="100%" height="350px">
-            <tr>
-                <th rowspan="2"><img src="../image/ExclusiveOffer.png"></th>
-                <th>Unlock Exclusive Offers<br> For Lighting Fast Ordering Experience download the Domino's app</th>
-            </tr>
-            <tr>
-                <td></td>
-                <td></td>
-            </tr>
-        </table>
-    </blockquote>
-<hr>
-<footer>
-<blockquote>
-    <button><a href="#Menu" width="100%" height="100%">Menu</a></button>
-    <button><a href="#VegPizza" width="100%" height="100%">Veg Pizza</a></button>
-    <button><a href="#ChickenPizza" width="100%" height="100%">Chicken Pizza</a></button>
-    <button><a href="#Pasta" width="100%" height="100%">Pasta</a></button>
-    <button><a href="#PizzaCrust" width="100%" height="100%">Pizza Crust</a></button>
-    <button><a href="#Beverages" width="100%" height="100%">Beverages</a></button>
-    <button><a href="#PizzaMania" width="100%" height="100%">Pizza Mania</a></button>
-    <button><a href="#BurgerPizza" width="100%" height="100%">Burger Pizza</a></button>
-    <button><a href="#FarmHousePizza" width="100%" height="100%">Farm House Pizza</a></button>
-</blockquote>    
-</footer>
+        <blockquote style="text-align: justify;">
+            <table>
+                <tr>
+                    <th>
+                        <P>
+                        <h3>Domino's Pizza: Delivering Happiness</h3>
+                        <p>What’s better than having a crispy melty pizza, you ask?</p>
+                        <p>Having that crispy and melty pizza in the comfort of your own home with the ones you love, we
+                            say.</p>
+                        <p>With Domino's it is always “Rishton ka time”. Whether it's a treat for your promotion, a kid
+                            topping his
+                            class or winning the heart of your wife who is too tired to cook after a long day at work! A
+                            cheesy slice of
+                            the best pizza is all one needs to put things into perspective and start any celebration.
+                            Plus, you do not
+                            even need to rush to the restaurant to have one now. A call, a few clicks on our website or
+                            a few touches on
+                            the mobile screen is all you have to do to have that tempting, light-on-the-pocket pizza at
+                            your doorstep.
+                        </p>
+                        <p>There is something for everyone here. The vegetarians, non-vegetarians, the sides’ lovers and
+                            also the ones
+                            who love to have something sweet by the time they reach the last bite of the last slice of
+                            pizza slice.
+                        </p>
+                        <p>
+                        <h3>What We Need - More Choice. More Fun.</h3>
+                        </p>
+                        <p>No matter what the situation, pizza always helps. Especially a pizza that gives you the
+                            freedom to choose
+                            your toppings - from paneer, crisp capsicum, onion, grilled mushroom, golden corn, black
+                            olives, fresh
+                            tomato, red paprika, jalapeno, paneer tikka and extra cheese to non-veg toppings such as
+                            pepper barbeque
+                            chicken, peri-peri chicken, grilled chicken rasher, chicken sausage or chicken tikka- the
+                            options are almost
+                            endless, anything and everything you can think of that too on top of the crust of your
+                            choice - New
+                            hand-tossed crust, wheat thin crust, cheese burst crust, classic hand-tossed crust or a
+                            fresh pan pizza.
+                            Because just like a pizza, Domino's understands you.
+                        </p>
+                        <p>And to shoo away those end-of-the-month blues while placing your order with our pizza
+                            restaurant, check out
+                            the everyday pizzas from pizza mania combos with everyday value offer of 2 pizzas starting
+                            at just ₹99
+                            (regular size) and ₹199 (medium size) each.
+                        </p>
+                        <p>
+                        <h3>The Promise Of 30-Minute Delivery</h3>
+                        </p>
+                        <p>The icing on the cake or more aptly the extra cheese on your already fabulous pizza is that
+                            Domino’s takes
+                            only half an hour for its pizza delivery service. Don’t believe us? Time it if you please.
+                            With 1250+ stores
+                            present all over India, you can have a Domino’s pizza even while traveling on a train. Yes,
+                            you are reading
+                            it right, you can enjoy pizza on train too.
+                        </p>
+                        <p>So stop googling for the “pizza shops near me” and order from your nearest pizza outlet to
+                            have a hot box of
+                            pizza on your table in the next 30 minutes, or berth at the next halting station.
+                        </p>
+                        <p>
+                        <h3>Franchise Information</h3>
+                        </p>
+                        <p>Jubilant FoodWorks Limited is the Master Franchisee of Domino’s Pizza in India, Bangladesh,
+                            Sri Lanka and
+                            Nepal with sole and exclusive rights to own and operate Domino’s Pizza restaurants in these
+                            territories. For
+                            any franchise-related queries, kindly email us directly at dominos.franchise@jublfood.com
+                        </p>
+                        <p>We have come across a few instances of fraudsters posing as Jubilant FoodWorks and asking for
+                            payment from
+                            gullible investors against the promise of a Domino’s franchise. We therefore caution and
+                            urge all interested
+                            parties to be careful and vigilant and interact only with the email id mentioned above.
+                            Anyone dealing with
+                            such fraudsters shall be doing so on their own peril, risk and consequences.
+                        </p>
+                        <p>Neither Jubilant FoodWorks nor its Directors/Officers shall be responsible for any loss,
+                            harm, damage or
+                            fraud that occurs or may occur or arise to any person who decides to access such fake
+                            websites, or deal with
+                            them.
+                        </p>
+                        </P>
+                    </th>
+                </tr>
+            </table>
+        </blockquote>
+        <hr>
+        <blockquote>
+            <table border="0" width="100%" height="350px" style="text-align: center;">
+                <tr>
+                    <th rowspan="2"><img src="../image/ExclusiveOffer.png"></th>
+                    <th colspan="2">Unlock Exclusive Offers<br> <br>
+                        For Lighting Fast Ordering Experience download the
+                        Domino's app</th>
+                </tr>
+                <tr>
+                    <td><img src="../image/GooglePlay.png" alt="this is googleplay image" width="200px" height="100px">
+                    </td>
+                    <td><img src="../image/AppleAppStore.png" alt="this is AppleAppStore" width="200px" height="100px">
+                    </td>
+                </tr>
+            </table>
+        </blockquote>
+        <hr>
+        <footer>
+            <blockquote>
+                <button><a href="#Menu" width="100%" height="100%">Menu</a></button>
+                <button><a href="#VegPizza" width="100%" height="100%">Veg Pizza</a></button>
+                <button><a href="#ChickenPizza" width="100%" height="100%">Chicken Pizza</a></button>
+                <button><a href="#Pasta" width="100%" height="100%">Pasta</a></button>
+                <button><a href="#PizzaCrust" width="100%" height="100%">Pizza Crust</a></button>
+                <button><a href="#Beverages" width="100%" height="100%">Beverages</a></button>
+                <button><a href="#PizzaMania" width="100%" height="100%">Pizza Mania</a></button>
+                <button><a href="#BurgerPizza" width="100%" height="100%">Burger Pizza</a></button>
+                <button><a href="#FarmHousePizza" width="100%" height="100%">Farm House Pizza</a></button>
+            </blockquote>
+            <table border="1" width="100%" style="text-align: justify;">
+                <tr>
+                    <th><b>Menu</b>
+                    </th>
+                    <th><b>Company</b>
+                    </th>
+                    <th><b>Pizza Restaurant</b>
+                    </th>
+                    <th><b>About</b>
+                    </th>
+                    <th><b>Legal</b>
+                    </th>
+                    <th><b>Social Media</b></th>
+                </tr>
+                <tr>
+                    <td>Veg Pizza<br>
+                        Chicken Pizza<br>
+                        Pasta<br>
+                        Pizza Crust<br>
+                        Beverages<br>
+                        Pizza Mania<br>
+                        Burger Pizza</td>
+                    <td>Blog<br>
+                        Investor<br>
+                        Feedback<br>
+                        Adds</td>
+                    <td> Restaurants Near Me<br>
+                        Pizza Near Me<br>
+                        Food Near Me<br>
+                        Food Delivery<br>
+                        Italian Food<br>
+                        Order Food Online</td>
+                    <td>Gift card<br>
+                        Card Balance Enquiry<br>
+                        FAQ<br>
+                        Virtual Pizza Party<br>
+                        E-Gift Vouchers</td>
+                    <td>Disclaimer<br>
+                        Terms & Conditions<br>
+                        Privacy Policy</td>
+                    <td></td>
 
+                </tr>
 
+            </table>
+
+            <p style="text-align: center;"> &gt;<b>All Rights Reserved.:</b> <i>Copyright © Jubilant FoodWorks
+                    Ltd.</i>&lt;</p>
+        </footer>
 
 </body>
 
