--- a/PROJECT/01PROJECT.html
+++ b/PROJECT/01PROJECT.html
@@ -115,9 +115,9 @@
 
     </blockquote>
     <blockquote content="width=device-width" initial-scale="1.0">
-        <table border="1" width="100%" style="text-align: center;" height="100px">
-            <tr>
-                <th colspan="2">Header 1</th>
+        <table width="100%" style="text-align: center;" height="100px">
+            <tr >
+                <th colspan="2" >Header 1</th>
                 <th colspan="2">Header 2</th>
             </tr>
             <tr>
