--- a/TASK/11WireFrame.html
+++ b/TASK/11WireFrame.html
@@ -13,15 +13,15 @@
             <nav>
                 <table border="1" width="100%" height="50px">
                     <tr>
-                        <th width="20%" height="10px"></th>
-                        <th width="10%" height="10px"></th>
-                        <th width="10%" height="10px"></th>
-                        <th width="10%" height="10px"></th>
-                        <th width="10%" height="10px"></th>
-                        <th width="10%" height="10px"></th>
-                        <th width="10%" height="10px"></th>
-                        <th width="10%" height="10px"></th>
-                        <th width="10%" height="10px"><button>Add</button></th>
+                        <th width="20%" height="10px">Logo</th>
+                        <th width="10%" height="10px"><a href="#HOME" alt="This is Home">Home</a></th>
+                        <th width="10%" height="10px"><a href="#About">About</a></th>
+                        <th width="10%" height="10px"><a href="#Roadmap">Roadmap</a></th>
+                        <th width="10%" height="10px"><a href="#collecions">Collections</a></th>
+                        <th width="10%" height="10px"><a href="#Shop">Shop</a></th>
+                        <th width="10%" height="10px"><a href="#Pages">Pages</a></th>
+                        <th width="10%" height="10px"><a href="#Contact">Contact</a></th>
+                        <th width="10%" height="10px"><a href="#Form"><button>Join|Discard</button></a></th>
                     </tr>
                 </table>
             </nav>
@@ -31,69 +31,88 @@
         <main>
             <table border="1" width="100%" height="200px">
                 <tr>
-                    <th colspan="3"><button>Add</button><button>Add</button></th>
-                    <th width="40%" rowspan="2"></th>
+                    <th colspan="3">
+                        <h2>Start of Main Body headding Content</h2><br>
+                        <p>Content and Details</p><button>Add</button><button>Add</button>
+                    </th>
+                    <th width="40%" rowspan="2"> Text / Image</th>
                 </tr>
                 <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td>
+                        <h1>h1 number</h1><br>
+                        <p>Text</p>
+                    </td>
+                    <td>
+                        <h1>h1 number</h1><br>
+                        <p>Text</p>
+                    </td>
+                    <td>
+                        <h1>h1 number</h1><br>
+                        <p>text</p>
+                    </td>
                 </tr>
             </table>
             <table border="1" width="100%" height="30px">
-                <caption>Our Partners</caption>
+                <caption>Table Caption</caption>
                 <tr>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
+                    <th>Text/Logo</th>
+                    <th>Text/logo</th>
+                    <th>Text/logo</th>
+                    <th>Text/logo</th>
+                    <th>Text/logo</th>
                 </tr>
             </table>
             <table border="1" width="100%" height="200px">
                 <tr>
-                    <th width="40%" rowspan="2"></th>
-                    <th></th>
+                    <th width="40%" rowspan="2">Text/logo</th>
+                    <th>
+                        <h3>Text</h3><br>
+                        <h1>Heading Content</h1><br>
+                        <p>Text</p>
+                    </th>
                 </tr>
                 <tr>
                     <td><button>Add</button></td>
                 </tr>
-            </table>
-            <hr>
-            <div style="text-align: center;">
-                <h1>Story</h1><br>
-                <p>Content</p>
-            </div>
-            <table border="1" width="100%" height="50px">
                 <tr>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
+                    <th colspan="2">
+                        <h1>Story</h1><br>
+                        <p>Content</p>
+                    </th>
                 </tr>
             </table>
-            <div style="text-align: center;"><button>Add</button></div>
-            <div style="text-align: center;">
-                <h3>Blog</h3><br>
-                <div style="text-align: center;">
-                    <h1>Blog</h1><br>
-                    <p>Content</p>
-                </div>
-                <table border="1" width="100%" height="20Px">
-                    <tr>
-                        <th></th>
-                        <th></th>
-                        <th></th>
-                    </tr>
-                </table>
+            <table border="1" width="100%" height="50px">
+                <tr>
+                    <th>Text/logo</th>
+                    <th>Text/logo</th>
+                    <th>Text/logo</th>
+                    <th>Text/logo</th>
+                </tr>
+                <tr>
+                    <th Colspan="4"><button>Click for Add</button></th>
+                </tr>
 
-                <tabel>
-                    <tr>
-                        <th></th>
-                        <th></th>
-                        <th></th>
-                    </tr>
-                </tabel>
+            </table>
+            <table border="1" width="100%" height="200px">
+                <tr>
+                    <th>
+                        <div style="text-align: center;">
+                            <h3>Blog</h3><br>
+                            <div style="text-align: center;">
+                                <h1>Text Heading</h1><br>
+                                <p>Text Content</p>
+                            </div>
+                    </th>
+                </tr>
+            </table>
+
+            <table border="1" width="100%" height="20Px">
+                <tr>
+                    <th>Text/logo</th>
+                    <th>Text/logo</th>
+                    <th>Text/logo</th>
+                </tr>
+            </table>
         </main>
     </blockquote>
     <blockquote>
@@ -101,11 +120,11 @@
             <table border="1" width="100%">
                 <tr>
                     <th width="60%">
-                        <h4>Data</h4> <br>
+                        <h4>Start of Footer Data</h4> <br>
                         <h2>Data</h2>
                         <p>Details</p>
                         <form action="What to Happen" method="post"></form>
-                        <label for="email">Email</label>
+                        <label for="subscribe">Subscribe</label>
                         <input type="email" id="email" name="email" required>
                         <button type="subscribe">subscribe</button>
                     </th>
