--- a/TASK/08DominosClone.html
+++ b/TASK/08DominosClone.html
@@ -14,7 +14,7 @@
                     <th width="20%"><img src="../image/DominosLOGO.svg"></th>
                     <th width="30%"></th>
                     <th width="20%"><label for="Select"></label>
-                        <input type="radio" id="Delivery" name="Select" value="Delivery" required>
+                        <input type="radio" id="Delivery" name="Select" value="Delivery">
                         <label style="color: white;" for="Delivery">Delivery</label>
                         <input type="radio" id="Pickup/Dine-in" name="Select" value="Pickup/Dine-in">
                         <label style="color: white;" for="Pickup/Dine-in">Pickup/Dine-in</label>
