--- a/PRACTICE/Test.html
+++ b/PRACTICE/Test.html
@@ -3,39 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dominos Pizza Clone</title>
+    <title>Document</title>
 </head>
 <body>
-<header>
-    <nav><table border="0" width="100%" height="20px" style="background-image: url(../IMAGE/DominosBackground.png);"><tr>
-        <th width="20%"><img src="../image/DominosLOGO.svg"></th>
-        <th width="20%"></th>
-        <th width="30%"><button style="background-image: url(../IMAGE/DominosBackground.png);"><label for="Select"></label>
-            <input type="radio" id="Delivery" name="Select" value="Delivery" required>
-            <label for="Delivery">Delivery</label>
-            <input type="radio" id="Pickup/Dine-in" name="Select" value="Pickup/Dine-in">
-            <label for="Pickup/Dine-in">Pickup/Dine-in</label></button></th>
-        <th width="20%"><button>Form display of loction</button></th>
-        <th width="10%"><button>My Account</button></th>
-    </tr></table></nav>
-</header>    
-<hr>
-<header>
-    <nav><table border="0" width="100%" height="20px"><tr>
-        <th width="9%"><button>Every Day Value</button></th>
-        <th width="9%"><button>Recomended</button></th>
-        <th width="9%"><button>New Launches</button></th>
-        <th width="9%">Ragi Pizza</th>
-        <th width="9%">Veg Pizza</th>
-        <th width="9%">Bevarages</th>
-        <th width="9%">Sides</th>
-        <th width="9%">Pizza Mania</th>
-        <th width="9%">Value Combos</th>
-        <th width="9%">Desserts</th>
-        <th width="9%">No Onion No Garlic</th>
-    </tr></table></nav>
-</header>  
-<hr>
-
+    <header>
+        <div style="text-align: center;"><h1><img src="../image/Satvik.png" alt="This is Satvik Logo" width="100px" height="100px"></h1></div>
+    </header> 
+<table  border="1" width="100%" height="50px">
+    <tr>
+        <th>HOME</th>
+        <th>About</th>
+        <th>Booking</th>
+        <th>Menu</th>
+        <th>Contact</th>
+    </tr>
+</table>
+      
 </body>
 </html>
