--- a/TASK/12RestaurantsSatvik.html
+++ b/TASK/12RestaurantsSatvik.html
@@ -1,73 +1,125 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Satvik Restaurant</title>
 </head>
+
 <body>
-<header>
-    <div style="text-align: center;"><h1><img src="../image/Satvik.png" alt="This is Satvik Logo" width="100px" height="100px"></h1></div>
-<hr>
-<blockquote>
-<tabe border="1" width="100%" height="50px">
-    <tr>
-        <th><button><a href="#Home" >HOME</a></button></th>
-        <th><button><a href="#ABOUTUS">About Us</a></button></th>
-        <th><button><a href="#Booking">Booking</a></button></th>
-        <th><button><a href="#Menu">Menu</a></button></th>
-        <th><button><a href="#Contact">Contact</a></button></th>
-    </tr>
-</tabe>
-</header>
-<hr>
-<table border="1" width="100%" height="600px">
-    <tr>
-        <th width="80%" height="100%" rowspan="2"> About Section </th>
-        <th width="20%" height="100%"><iframe name="ADD" width="100%" height="200px"></iframe> add and offer will run here</th>
-    </tr>
-    <tr>
-        
-        <td height="300px">Offer Page</td>
-    </tr>
-</table> 
-<table border="1" width="100%" height="50px">
-    <tr>
-        <th><a href="" name="Booking" target="_top">Booking</a></th>
-    </tr>
-</table> 
-<hr>
-<table border="1" width="100%" height="600px">
-    <tr>
-        <th width="40%" height="100%px"> Insert Form hear </th>
-        <th width="60%" height="100%"><img src="../image/restaurant.png" alt="This is Satvik Interior" width="100%" height="600px"></th>
-    </tr>
-</table>  
-<hr>
-<table border="1" width="100%" height="50px">
-    <tr>
-        <th width="100%"><a href="" Name="Menu" target="_top">Menu</a></th>
-    </tr>
-</table>
-<hr>
-<table border="1" width="100%" height="600px">
-    <tr>
-        <th width="40%" height="100%px">Breakfast Lunch and Dinner link</th>
-        <th width="60%" height="100%"> this will be I frame which will reflect menu of BFast Lunch & Dinner</th>
-    </tr>
-</table>
-<hr>
-<table border="1" width="100%" height="50px" style="text-align: center;">
-    <tr>
-        <th width="100%"><a href="" Name="Contact" target="_top">Contact</a></th>
-    </tr>
-    <tr>
-        <th width="100%" height="300px"></th>
-    </tr>
-    <tr>
-        <td><img src="../image/Satvik.png" alt="This is Satvik LOGO" width="200px" height="200px"></td>
-    </tr>
-</table>
-</blockquote>
+    <header>
+        <div style="text-align: center;">
+            <h1><img src="../image/Satvik.png" alt="This is Satvik Logo" width="100px" height="100px"></h1>
+        </div>
+        <hr>
+        <blockquote>
+            <nav>
+                <table border="0" width="100%" height="50px">
+                    <tr>
+                        <th><button Style="width: 80%"><a href="#Home">
+                                    <h3>HOME</h3>
+                                </a></button></th>
+                        <th><button Style="width: 80%"><a href="#ABOUTUS">
+                                    <h3>About Us</h3>
+                                </a></button></th>
+                        <th><button Style="width: 80%"><a href="#Booking">
+                                    <h3>Booking</h3>
+                                </a></button></th>
+                        <th><button Style="width: 80%"><a href="#Menu">
+                                    <h3>Menu</h3>
+                                </a></button></th>
+                        <th><button Style="width: 80%"><a href="#Contact">
+                                    <h3>Contact</h3>
+                                </a></button></th>
+                    </tr>
+                </table>
+            </nav>
+    </header>
+    <hr>
+    <table border="1" width="100%" height="600px">
+        <tr>
+            <th width="80%" height="100%" rowspan="2">
+                <h3>Satvik: Purity Served with Simplicity</h3>
+                <p><i>At Satvik, we believe in serving food that is pure, simple, and fresh. Our vision is to promote a
+                        lifestyle that values health and well-being through the consumption of freshly prepared,
+                        vegetarian food. We are committed to providing meals that are made to order using the freshest
+                        ingredients.</i></p>
+                <p><i>We pride ourselves on our ability to customize meals according to our guests' preferences,
+                        ensuring that each dish is a perfect blend of flavors and nutrients. Join us at Satvik to
+                        experience purity served with simplicity.</i></p>
+                <h4>Vision:</h4>
+                <p><i>To be the leading provider of fresh, vegetarian food that promotes a healthy and balanced
+                        lifestyle.</i></p>
+                <h4>Mission:</h4>
+                <p> <i>Our mission is to offer a variety of delicious and nutritious vegetarian dishes that are prepared
+                        with the utmost care and attention to detail. We aim to create an inviting and warm environment
+                        where our guests can enjoy wholesome meals that cater to their individual tastes and
+                        preferences.</i></p>
+
+                <h4>Concept:</h4>
+                <p><i>
+                        Satvik: Purity Served with Simplicity is a restaurant dedicated to serving freshly prepared
+                        vegetarian food. Everything is made to order using live vegetables and spices of your choice.
+                        <br> <br>Our breakfast menu features an array of stuffed parathas, buttermilk, sweet lassi, and
+                        special seasonal vegetables. <br> <br><b>For lunch, we offer live vegetables cooked to perfection,
+                        special vegetable dishes, rice, breads, and delectable desserts. <br> <br>Dinner at Satvik
+                        includes upma, light snacks, vermicelli meals, paratha, and sabudana dishes.</i></p>
+
+            </th>
+            <th width="20%" height="100%"><iframe name="ADD" width="100%" height="200px"></iframe> add and offer will
+                run here</th>
+        </tr>
+        <tr>
+
+            <td height="300px">Offer Page</td>
+        </tr>
+    </table>
+    <table border="1" width="100%" height="50px">
+        <tr>
+            <th><a href="" id="Booking" name="Booking" target="_top">
+                    <h2>Booking</h2>
+                </a></th>
+        </tr>
+    </table>
+    <hr>
+    <table border="1" width="100%" height="600px">
+        <tr>
+            <th width="40%" height="100%px"> Insert Form hear </th>
+            <th width="60%" height="100%"><img src="../image/restaurant.png" alt="This is Satvik Interior" width="100%"
+                    height="600px"></th>
+        </tr>
+    </table>
+    <hr>
+    <table border="1" width="100%" height="50px">
+        <tr>
+            <th width="100%"><a href="" id="Menu" Name="Menu" target="_top">
+                    <h2>Menu</h2>
+                </a></th>
+        </tr>
+    </table>
+    <hr>
+    <table border="1" width="100%" height="600px">
+        <tr>
+            <th width="40%" height="100%px">Breakfast Lunch and Dinner link</th>
+            <th width="60%" height="100%"> this will be I frame which will reflect menu of BFast Lunch & Dinner</th>
+        </tr>
+    </table>
+    <hr>
+    <table border="1" width="100%" height="50px" style="text-align: center;">
+        <tr>
+            <th width="100%"><a href="" id="contact" Name="Contact" target="_top">
+                    <h2>Contact</h2>
+                </a></th>
+        </tr>
+        <tr>
+            <th width="100%" height="300px"></th>
+        </tr>
+        <tr>
+            <td><img src="../image/Satvik.png" alt="This is Satvik LOGO" width="200px" height="200px"></td>
+        </tr>
+    </table>
+    </blockquote>
 </body>
+
 </html>
