--- a/TASK/11WireFrame.html
+++ b/TASK/11WireFrame.html
@@ -32,18 +32,18 @@
             <table border="1" width="100%" height="200px">
                 <tr>
                     <th colspan="3">
-                        <h2>Start of Main Body headding Content</h2><br>
+                        <h1>Start of Main Body headding Content</h1><br>
                         <p>Content and Details</p><button>Add</button><button>Add</button>
                     </th>
                     <th width="40%" rowspan="2"> Text / Image</th>
                 </tr>
                 <tr>
                     <td>
-                        <h1>h1 number</h1><br>
+                        <h2>h2 number</h2><br>
                         <p>Text</p>
                     </td>
                     <td>
-                        <h1>h1 number</h1><br>
+                        <h2>h2 number</h2><br>
                         <p>Text</p>
                     </td>
                     <td>
@@ -67,7 +67,7 @@
                     <th width="40%" rowspan="2">Text/logo</th>
                     <th>
                         <h3>Text</h3><br>
-                        <h1>Heading Content</h1><br>
+                        <h2>Heading Content</h2><br>
                         <p>Text</p>
                     </th>
                 </tr>
@@ -76,7 +76,7 @@
                 </tr>
                 <tr>
                     <th colspan="2">
-                        <h1>Story</h1><br>
+                        <h2>Story</h2><br>
                         <p>Content</p>
                     </th>
                 </tr>
@@ -99,7 +99,7 @@
                         <div style="text-align: center;">
                             <h3>Blog</h3><br>
                             <div style="text-align: center;">
-                                <h1>Text Heading</h1><br>
+                                <h2>Text Heading</h2><br>
                                 <p>Text Content</p>
                             </div>
                     </th>
@@ -128,8 +128,17 @@
                         <input type="email" id="email" name="email" required>
                         <button type="subscribe">subscribe</button>
                     </th>
-                    <th></th>
-                    <th></th>
+                    <th> <h2>TEXT Heading / image</h2><br>
+                    Text <br>
+                Social medisa buttons</th>
+                    <th>Quick Menu<br>
+                    <ul>
+                        <li>List</li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul></th>
                 </tr>
             </table>
         </footer>
@@ -137,10 +146,10 @@
     <hr>
     <table border="1" width="100%" height="20Px">
         <tr>
-            <th width="60%"></th>
+            <th width="60%">copyright</th>
             <th width="10%"></th>
-            <th width="10%"></th>
-            <th width="20%"></th>
+            <th width="10%">Text</th>
+            <th width="20%">Text</th>
         </tr>
     </table>
 
