--- a/TASK/11WireFrame.html
+++ b/TASK/11WireFrame.html
@@ -29,64 +29,71 @@
     </blockquote>
     <blockquote>
         <main>
-            <table border="1" width="100%" height="200px">
+            <table border="1" width="100%" height="200px" style="text-align: justify;">
                 <tr>
                     <th colspan="3">
-                        <h1>Start of Main Body headding Content</h1><br>
-                        <p>Content and Details</p><button>Add</button><button>Add</button>
+                        <h1>Main Heading H1</h1><br>
+                        <p>Paragraph Text</p><button>Add</button><button>Add</button>
                     </th>
-                    <th width="40%" rowspan="2"> Text / Image</th>
+                    <th width="40%" rowspan="2"> <img src="" alt="GraphicImage01"> size 200px</th>
                 </tr>
                 <tr>
                     <td>
-                        <h2>h2 number</h2><br>
-                        <p>Text</p>
+                        <h2>H2 Text for Number or Text</h2><br>
+                        <p>Description Text in h6</p>
                     </td>
                     <td>
-                        <h2>h2 number</h2><br>
-                        <p>Text</p>
+                        <h2>H2 Text for Number or Text</h2><br>
+                        <p>Description Text in h6</p>
                     </td>
                     <td>
-                        <h1>h1 number</h1><br>
-                        <p>text</p>
+                        <h2>H2 Text for Number or Text</h2><br>
+                        <p>Description Text in h6</p>
                     </td>
-                </tr>
-            </table>
-            <table border="1" width="100%" height="30px">
-                <caption>Table Caption</caption>
-                <tr>
-                    <th>Text/Logo</th>
-                    <th>Text/logo</th>
-                    <th>Text/logo</th>
-                    <th>Text/logo</th>
-                    <th>Text/logo</th>
-                </tr>
-            </table>
-            <table border="1" width="100%" height="200px">
-                <tr>
-                    <th width="40%" rowspan="2">Text/logo</th>
-                    <th>
-                        <h3>Text</h3><br>
-                        <h2>Heading Content</h2><br>
-                        <p>Text</p>
-                    </th>
-                </tr>
-                <tr>
-                    <td><button>Add</button></td>
-                </tr>
-                <tr>
-                    <th colspan="2">
-                        <h2>Story</h2><br>
-                        <p>Content</p>
-                    </th>
                 </tr>
             </table>
             <table border="1" width="100%" height="50px">
+                    <tr><th colspan="5" Height="20px">h3 Text for headding of Table</th></tr>
+                    <tr>
+                    <th width="20%" height="30px"><img src="" alt="Logo Here">30px size Text/Logo</th>
+                    <th width="20%" height="30px"><img src="" alt="Logo Here">30px size Text/Logo</th>
+                    <th width="20%" height="30px"><img src="" alt="Logo Here">30px size Text/Logo</th>
+                    <th width="20%" height="30px"><img src="" alt="Logo Here">30px size Text/Logo</th>
+                    <th width="20%" height="30px"><img src="" alt="Logo Here">30px size Text/Logo</th>
+                </tr>
+            </table>
+            <table border="1" width="100%" height="200px">
                 <tr>
-                    <th>Text/logo</th>
-                    <th>Text/logo</th>
-                    <th>Text/logo</th>
-                    <th>Text/logo</th>
+                    <th width="40%" rowspan="2"><img src="" alt="GraphicImage02"> 200px.</th>
+                    <th>
+                        <h3>h3 Text sub Heading Content</h3><br>
+                        <h2>h2 Text Heading Content</h2><br>
+                        <p>Description Text in paragraph </p>
+                    </th>
+                </tr>
+                <tr>
+                    <td><button> Learn more Add</button></td>
+                </tr>
+                <tr>
+                    <th colspan="2">
+                        <h3>h3 Text Heading Content</h3><br>
+                        <h2>h2 Text Heading Content</h2>
+                        <p>Description Text in paragraph</p>
+                    </th>
+                </tr>
+            </table>
+            <table border="1" width="100%" height="300px">
+                <tr>
+                    <th><img src="" alt="GraphicImage03" width="25%" height="250px"> 250px ht</th>
+                    <th><img src="" alt="GraphicImage04"  width="25%" height="250px"> 250px ht</th>
+                    <th><img src="" alt="GraphicImage05" width="25%" height="250px"> 250px ht</th>
+                    <th><img src="" alt="GraphicImage06" width="25%" height="250px"> 250px ht</th>
+                </tr>
+                <tr>
+                    <th width="25%" height="50px"><h3>h3 Text Heading Content</h3></th>
+                    <th width="25%" height="50px"><h3>h3 Text Heading Content</h3></th>
+                    <th width="25%" height="50px"><h3>h3 Text Heading Content</h3></th>
+                    <th width="25%" height="50px"><h3>h3 Text Heading Content</h3></th>
                 </tr>
                 <tr>
                     <th Colspan="4"><button>Click for Add</button></th>
@@ -97,61 +104,76 @@
                 <tr>
                     <th>
                         <div style="text-align: center;">
-                            <h3>Blog</h3><br>
+                            <h3>h3 Text Heading Content</h3><br>
                             <div style="text-align: center;">
-                                <h2>Text Heading</h2><br>
-                                <p>Text Content</p>
+                                <h2>h2 Text Heading Content</h2><br>
+                                <p>Description Text in paragraph</p>
                             </div>
                     </th>
                 </tr>
             </table>
 
-            <table border="1" width="100%" height="20Px">
+            <table border="1" width="100%" height="20Px" Cellspacing="20">
                 <tr>
-                    <th>Text/logo</th>
-                    <th>Text/logo</th>
-                    <th>Text/logo</th>
+                    <th><img src="" alt="GraphicImage06" width="30%" height="250px"> 250px ht</th>
+                    <th><img src="" alt="GraphicImage06" width="30%" height="250px"> 250px ht</th>
+                    <th><img src="" alt="GraphicImage06" width="30%" height="250px"> 250px ht</th>
+                </tr>
+                <tr>
+                    <td><h3>h3 Text Heading Content</h3></td>
+                    <td><h3>h3 Text Heading Content</h3></td>
+                    <td><h3>h3 Text Heading Content</h3></td>
+                </tr>
+                <tr>
+                    <td><p>Description Text in paragraph</p></td>
+                    <td><p>Description Text in paragraph</p></td>
+                    <td><p>Description Text in paragraph</p></td>
+                </tr>
+                <tr>
+                    <td><a href="#Blog1" target="BlogLink1">Read More</a></td>
+                    <td><a href="#Blog2" target="BlogLink2">Read More</a></td>
+                    <td><a href="#Blog3" target="BlogLink3">Read More</a></td>
                 </tr>
             </table>
         </main>
     </blockquote>
     <blockquote>
         <footer>
-            <table border="1" width="100%">
+            <table border="1" width="100%" style="text-align: justify;">
                 <tr>
                     <th width="60%">
-                        <h4>Start of Footer Data</h4> <br>
-                        <h2>Data</h2>
-                        <p>Details</p>
+                        <h4>h4 Text Heading Content</h4> <br>
+                        <h3>h3 Text Heading Content</h3>
+                        <p>Description Text in paragraph</p>
                         <form action="What to Happen" method="post"></form>
                         <label for="subscribe">Subscribe</label>
                         <input type="email" id="email" name="email" required>
                         <button type="subscribe">subscribe</button>
                     </th>
-                    <th> <h2>TEXT Heading / image</h2><br>
-                    Text <br>
-                Social medisa buttons</th>
-                    <th>Quick Menu<br>
+                    <th width="20%"> <h2><img src="" alt="This is Logo">LOGO Text</h2><br>
+                        <p>Description Text in paragraph</p><br>
+                Social media buttons</th>
+                    <th width="20%">Quick Menu<br>
                     <ul>
                         <li>List</li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
+                        <li>List</li>
+                        <li>List</li>
+                        <li>List</li>
+                        <li>List</li>
                     </ul></th>
                 </tr>
             </table>
         </footer>
     </blockquote>
     <hr>
-    <table border="1" width="100%" height="20Px">
+    <blockquote><table border="1" width="100%" height="20Px">
         <tr>
             <th width="60%">copyright</th>
-            <th width="10%"></th>
+            <th width="10%">Text</th>
             <th width="10%">Text</th>
             <th width="20%">Text</th>
         </tr>
-    </table>
+    </table></blockquote>
 
 </body>
 
